<resources>
    <string name="app_name">Search Developers</string>
    <string name="main_title">A maneira mais rápida e enfiente de contratar serviços tecnológicos.</string>
    <string name="payment_title">Preencha os dados do titular</string>
    <string name="btn_client">Sou cliente</string>
    <string name="btn_professional">Sou profissional</string>
    <string name="btn_ihave_count">Já tenho conta</string>

    <string name="register_title">Informações pessoais</string>
    <string name="hint_name">Nome completo</string>
    <string name="hint_date">Data de Nascimento</string>
    <string name="place_holder_date">dd/mm/aaaa</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Celular</string>
    <string name="hint_password">Senha</string>
    <string name="hint_cpf_cnpj">CPF/CNPJ</string>
    <string name="cb_terms">Eu aceito os temos de uso</string>
    <string name="cb_iam">Eu sou:</string>
    <string name="cb_legal">Juridica</string>
    <string name="cb_physical">Física</string>
    <string name="btn_register_next">Próximo</string>


    <string name="finish_text_success">Sua conta na SearchDevelopers \n foi criada com sucesso!!</string>
    <string name="finish_text_fail">Erro ao cadastrar seus dados \n Tente novamente mais tarde.</string>
    <string name="finish_btn_success">Entrar</string>
    <string name="finish_btn_fail">Voltar ao início</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cliente">Ver clientes</string>
    <string name="menu_reputacao">Reputação</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_pagamento">Pagamento</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_painel">Painel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="config_title_personal">Dados pessoais</string>
    <string name="adicionar_cart_o">Adicionar cartão</string>
    <string name="title_activity_teste_imagem">TesteImagem</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enviar">Enviar</string>
    <string name="texto_avaliacao">Mostre qual foi a sua experiência ao interagir com esse perfil.</string>
    <string name="avaliar_perfil">Avaliar perfil</string>
    <string name="quero_ser_premium_agora">QUERO SER PREMIUM AGORA</string>
    <string name="redes_sociais">Redes Sociais:</string>
    <string name="digite_aqui">Digite aqui.</string>
    <string name="voltar">voltar</string>
    <string name="pagamento_efetuado_com_sucesso">Pagamento efetuado com sucesso!</string>


</resources>