<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login.CadastroActivity"
    android:background="@drawable/gradient"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_logo"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="630dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/custom_cadastro"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:text="@string/register_title"
            android:textColor="#CB636363"
            android:textSize="20dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/hint_name"
            app:placeholderText="Isabella Conti"
            app:placeholderTextColor="#c4c4c4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_below="@id/ed_nome"
            android:hint="@string/hint_date"
            app:placeholderText="@string/place_holder_date"
            app:placeholderTextColor="#c4c4c4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_nasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_below="@id/ed_nasc"
            android:hint="@string/hint_email"
            app:placeholderText="isabella@gmail.com"
            app:placeholderTextColor="#c4c4c4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_below="@id/ed_email"
            android:hint="@string/hint_phone"
            app:placeholderText="(xx)xxxxx-xxxx"
            app:placeholderTextColor="#c4c4c4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_below="@id/ed_telefone"
            android:hint="@string/hint_password"
            app:placeholderTextColor="#c4c4c4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_below="@id/ed_senha"
            android:hint="@string/hint_cpf_cnpj"
            app:placeholderTextColor="#c4c4c4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_cpf_cnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_termo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/cb_terms"
            android:textColor="#3DDBC4" />

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cb_iam" />

            <CheckBox
                android:id="@+id/cb_juridica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:onClick="cliqueiJuridica"
                android:text="@string/cb_legal"
                android:textColor="#3DDBC4" />

            <CheckBox
                android:id="@+id/cb_fisica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:onClick="cliqueiFisica"
                android:text="@string/cb_physical"
                android:textColor="#3DDBC4" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_cliente"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:onClick="registerValidation"
            android:text="@string/btn_register_next"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp" />


    </LinearLayout>

</RelativeLayout>