<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="25dp">

        <TextView
            android:id="@+id/title_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avaliar_perfil"
            android:textStyle="bold"
            android:textSize="31sp"
            android:textColor="#636363"
            />

        <TextView
            android:id="@+id/lblAvalie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/texto_avaliacao"
            android:textColor="#AEAEAE"
            android:textSize="20sp"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:stepSize="0.5"
            android:rating="0.0"
            android:progressBackgroundTint="#E4E1E1"
            android:secondaryProgressTint="#FFC107"
            android:progressTint="#FFC107"
            />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/enviar"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            android:textColor="#ffffff"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>