<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_category">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bandtec.searchdevelopers.activities.fragments.PainelFragment"
        android:label="@string/menu_cliente"
        tools:layout="@layout/fragment_painel" />

<!--    <fragment-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="com.bandtec.searchdevelopers.activities.ui.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_reputacao"-->
<!--        tools:layout="@layout/fragment_gallery" />-->

    <fragment
        android:id="@+id/nav_config"
        android:name="com.bandtec.searchdevelopers.activities.ui.configuration.ConfigurationFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_configuration" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.bandtec.searchdevelopers.activities.ui.category.CategoryFragment"
        android:label="Categorias"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.bandtec.searchdevelopers.activities.ui.favorite.FavoriteFragment"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/perfil"
        android:name="com.bandtec.searchdevelopers.activities.ui.perfil"
        android:label="fragment_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_beneficios"
        android:name="com.bandtec.searchdevelopers.activities.fragments.beneficios_premium"
        tools:layout="@layout/fragment_beneficios_premium" />

    <fragment
        android:id="@+id/nav_pagamento_sucesso"
        android:name="com.bandtec.searchdevelopers.activities.fragments.pagamento_efetuado"
        tools:layout="@layout/fragment_pagamento_efetuado" />

    <fragment
        android:id="@+id/nav_pagamento_erro"
        android:name="com.bandtec.searchdevelopers.activities.fragments.erro_pagamento_efetuado"
        tools:layout="@layout/fragment_erro_pagamento_efetuado" />


        <fragment
        android:id="@+id/nav_sair"
        android:label="@string/menu_sair"
        android:name="com.bandtec.searchdevelopers.LogoutFragment"
        tools:layout="@layout/fragment_logout" />

</navigation>